# a2a-agent-card-skill-governor

./: README.md
a2a-agent-card-skill-governor-definition/: README.md  exchange.json  gcl.yaml
a2a-agent-card-skill-governor-flex/: Cargo.toml  Makefile  README.md
a2a-agent-card-skill-governor-flex/playground/: docker-compose.yaml
a2a-agent-card-skill-governor-flex/playground/config/: api-context.yaml  api.yaml
a2a-agent-card-skill-governor-flex/playground/config/custom-policies/: note.txt
a2a-agent-card-skill-governor-flex/src/: a2a.rs  detect.rs  governor.rs  lib.rs
a2a-agent-card-skill-governor-flex/tests/: requests.rs
a2a-agent-card-skill-governor-flex/tests/common/: mod.rs  setup.rs
a2a-agent-card-skill-governor-flex/tests/config/: note.txt
docs/architecture/: ARCHITECTURE.md
docs/implementation/: IMPLEMENTATION.md
docs/superpowers/plans/: 2026-07-02-a2a-agent-card-skill-governor.md
docs/superpowers/specs/: 2026-07-02-a2a-agent-card-skill-governor-design.md
